Fix buttons on write todo bar overflow

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -44,6 +44,10 @@ button {
   cursor: pointer;
 }
 
+.text-input {
+  min-width: 0;
+}
+
 .buttons {
   display: flex;
   align-items: center;
